New Leistungen design

--- a/public/leistungen.html
+++ b/public/leistungen.html
@@ -6,14 +6,11 @@
     </head>
     <body>
         <div class="navigator line">
-
         </div>
 
-        <div class="blurBKG">
 
-            <video autoplay loop muted plays-inline class="back-video">
-                <source src="videoclip.mp4" type="video/mp4">
-            </video>
+        <div class="background-img2"> </div>
+        <div class="mainBackground2">
 
             <nav>
                 <img src="Praxis_NEU.png" class="logo">
@@ -23,12 +20,34 @@
                     <li><a href="#">KONTAKT</a></li>
                 </ul>
             </nav>
-            <div class="content">
+            <div class="content-Leistung">
                 <h1>Wer sind wir?</h1>
-                <a href="#">Erfahren Sie über uns</a>
             </div>
-            
-        
+
+            <div class="textbox-leistung">
+                <h1>
+                  Prävention
+                <ul>
+                <br \>
+                <br \>
+                <br \>
+                <li>Gesundheitsuntersuchung ab dem 35. Lebensjahr</li> <br \>
+                <li>Krebsvorsorge für Männer ab dem 45. Lebensjahr</li> <br \>
+                <li>Jugendschutzuntersuchungen (12.-16. Lebensjahr)</li> <br \>
+                <li>Kindervorsorgeuntersuchungen (U3-U9) </li><br \>
+                <li>Hautkrebsvorsorge</li> <br \>
+                <li>Laboruntersuchungen (Untersuchungen aus dem Blut) auf Gesamtcholesterin und Blutzucker</li> <br \>
+                <li>Untersuchungen aus dem Urin: Eiweiß, Blutzucker, Erythrozyten, Leukozyten und Nitrit mittels Harnstreifentest</li> <br \>
+                <li>Ausführliche Beratung über die Ergebnisse und gegebenenfalls die Einleitung einer Therapie </li> <br />
+                <br />
+                <br />
+                <br />
+                <br />
+                </ul>
+              </div>
+              </h1>
+        </div>
+
     </body>
 
 
