--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
         </div>
 
-        <div class="blurBKG">
+        <div class="mainBackground">
 
             <video autoplay loop muted plays-inline class="back-video">
                 <source src="videoclip.mp4" type="video/mp4">
@@ -25,7 +25,7 @@
             </nav>
             <div class="content">
                 <h1>Praxis Niederrhein</h1>
-                <a href="#">Erfahren Sie über uns</a>
+                <a href="leistungen.html">Erfahren Sie über uns</a>
             </div>
         </div>
 
