Fix background clip

--- a/public/leistungen.html
+++ b/public/leistungen.html
@@ -8,11 +8,9 @@
     <body>
         <div class="navigator line">
         </div>
-
-
-        <div class="background-img2"> </div>
-        <div class="mainBackground2">
-
+        <div class="main-content">
+            <div class="background-img2"> </div>
+            <div class="mainBackground2"> </div>
             <nav>
                 <img src="Praxis_NEU.png" class="logo">
                 <ul>
@@ -23,36 +21,22 @@
             </nav>
             <div class="content-Leistung">
                 <h1>Wer sind wir?</h1>
+                <div class="textbox-leistung">
+                    <div>
+                        <h2 class="textbox-leistung-title">Prävention</h2>
+                        <ul>
+                            <li>Gesundheitsuntersuchung ab dem 35. Lebensjahr</li> <br \>
+                            <li>Krebsvorsorge für Männer ab dem 45. Lebensjahr</li> <br \>
+                            <li>Jugendschutzuntersuchungen (12.-16. Lebensjahr)</li> <br \>
+                            <li>Kindervorsorgeuntersuchungen (U3-U9) </li><br \>
+                            <li>Hautkrebsvorsorge</li> <br \>
+                            <li>Laboruntersuchungen (Untersuchungen aus dem Blut) auf Gesamtcholesterin und Blutzucker</li> <br \>
+                            <li>Untersuchungen aus dem Urin: Eiweiß, Blutzucker, Erythrozyten, Leukozyten und Nitrit mittels Harnstreifentest</li> <br \>
+                            <li>Ausführliche Beratung über die Ergebnisse und gegebenenfalls die Einleitung einer Therapie </li> <br />
+                        </ul>
+                    </div>
+                </div>
             </div>
-
-            <div class="textbox-leistung">
-                <h1>
-                  Prävention
-                <ul>
-                <br \>
-                <br \>
-                <br \>
-                <li>Gesundheitsuntersuchung ab dem 35. Lebensjahr</li> <br \>
-                <li>Krebsvorsorge für Männer ab dem 45. Lebensjahr</li> <br \>
-                <li>Jugendschutzuntersuchungen (12.-16. Lebensjahr)</li> <br \>
-                <li>Kindervorsorgeuntersuchungen (U3-U9) </li><br \>
-                <li>Hautkrebsvorsorge</li> <br \>
-                <li>Laboruntersuchungen (Untersuchungen aus dem Blut) auf Gesamtcholesterin und Blutzucker</li> <br \>
-                <li>Untersuchungen aus dem Urin: Eiweiß, Blutzucker, Erythrozyten, Leukozyten und Nitrit mittels Harnstreifentest</li> <br \>
-                <li>Ausführliche Beratung über die Ergebnisse und gegebenenfalls die Einleitung einer Therapie </li> <br />
-                <br />
-                <br />
-                <br />
-                <br />
-                </ul>
-              </div>
-              </h1>
         </div>
-
     </body>
-
-
-
-
-
 </html>
