Added Tab icons to the html files

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Praxis Niederrhein - Hausärztliche Gemeinschaftspraxis</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="Praxis_NEU.png">
     </head>
     <body>
         <div class="navigator line">
