Added Kontakt.html Added box-shadow to "Nav"

--- a/public/leistungen.html
+++ b/public/leistungen.html
@@ -16,24 +16,58 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="leistungen.html">LEISTUNGEN</a></li>
-                    <li><a href="#">KONTAKT</a></li>
+                    <li><a href="kontakt.html">KONTAKT</a></li>
                 </ul>
             </nav>
             <div class="content-Leistung">
                 <h1>Wer sind wir?</h1>
                 <div class="textbox-leistung">
                     <div>
+                        <br \>
+                        <h2>Liebe Patientin, lieber Patient.</h2> 
+                        <br \>
+                        <p>
+                        Seit 2004 arbeiten wir als als internistische und allgemeinmedizinische Gemeinschaftspraxis
+                        im Herzen Krefelds für ein Ziel:</p> 
+                        <br \>
+                        <strong>Die Erhaltung und Wiederherstellung ihrer Gesundheit.</strong>
+                        <br \>
+                        <br \>
                         <h2 class="textbox-leistung-title">Prävention</h2>
                         <ul>
-                            <li>Gesundheitsuntersuchung ab dem 35. Lebensjahr</li> <br \>
-                            <li>Krebsvorsorge für Männer ab dem 45. Lebensjahr</li> <br \>
-                            <li>Jugendschutzuntersuchungen (12.-16. Lebensjahr)</li> <br \>
-                            <li>Kindervorsorgeuntersuchungen (U3-U9) </li><br \>
-                            <li>Hautkrebsvorsorge</li> <br \>
-                            <li>Laboruntersuchungen (Untersuchungen aus dem Blut) auf Gesamtcholesterin und Blutzucker</li> <br \>
-                            <li>Untersuchungen aus dem Urin: Eiweiß, Blutzucker, Erythrozyten, Leukozyten und Nitrit mittels Harnstreifentest</li> <br \>
-                            <li>Ausführliche Beratung über die Ergebnisse und gegebenenfalls die Einleitung einer Therapie </li> <br />
+                            <li>Gesundheitsuntersuchung ab dem 35. Lebensjahr</li> 
+                            <li>Krebsvorsorge für Männer ab dem 45. Lebensjahr</li> 
+                            <li>Jugendschutzuntersuchungen (12.-16. Lebensjahr)</li>
+                            <li>Kindervorsorgeuntersuchungen (U3-U9) </li>
+                            <li>Hautkrebsvorsorge</li> 
+                            <li>Laboruntersuchungen (Untersuchungen aus dem Blut) auf Gesamtcholesterin und Blutzucker</li> 
+                            <li>Untersuchungen aus dem Urin: Eiweiß, Blutzucker, Erythrozyten, Leukozyten und Nitrit mittels Harnstreifentest</li> 
+                            <li>Ausführliche Beratung über die Ergebnisse und gegebenenfalls die Einleitung einer Therapie </li> 
                         </ul>
+                        <h2 class="textbox-leistung-title">Impfungen</h2>
+                            <ul>
+                                <li>Gesundheitsuntersuchung ab dem 35. Lebensjahr</li> 
+                                <li>Krebsvorsorge für Männer ab dem 45. Lebensjahr</li> 
+                                <li>Jugendschutzuntersuchungen (12.-16. Lebensjahr)</li> 
+                                <li>Kindervorsorgeuntersuchungen (U3-U9) </li>
+                            </ul>
+
+                        <h2 class="textbox-leistung-title">Naturheilverfahren</h2>
+                            <ul>
+                               <li> Viele leichtere Erkrankungen und sogenannte “Befindlichkeitsstörungen” benötigen keine stark wirkenden 
+                                Medikamente oder einschneidende Therapien, sondern lassen sich mit relativ einfachen und nebenwirkungsarmen Behandlungsmethoden angehen. 
+                                Unter dem Begriff “Naturheilverfahren” sind verschiedene Behandlungsmethoden zusammengefasst, 
+                                die man wiederum in einzelne Gruppen einteilen kann.
+                                </li>
+                                <br \>
+                            </ul>
+                        <h2 class="textbox-leistung-title">Diagnostik & Therapie</h2>
+                            <ul>akuter und chronischer Erkrankungen u.a. mittels:
+                                <li>EKG, die Ableitung der Herzströme</li>
+                                <li>Langzeit-Blutdruckmessung</li>
+                                <li>Ultraschall</li>
+                                <li>Ernährungsberatung</li>
+                            </ul>
                     </div>
                 </div>
             </div>
