--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="leistungen.html">LEISTUNGEN</a></li>
-                    <li><a href="#">KONTAKT</a></li>
+                    <li><a href="kontakt.html">KONTAKT</a></li>
                 </ul>
             </nav>
             <div class="content">
