--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,64 @@
                 <a href="leistungen.html">Erfahren Sie über uns</a>
             </div>
         </div>
+        <section id="features">
+            <ul>
+                <li>
+                    <img class="feature-image" width="100" height="auto" src="doctor.svg"></img>
+                    <h2 class="feature-text">Sehr guter Service</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis corporis, modi soluta delectus illo fugiat.
+                    </p>
+                </li>
+                <li>
+                    <img class="feature-image" width="100" height="auto" src="usd-circle.svg"></img>
+                    <h2 class="feature-text">Fairer Preis</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis corporis, modi soluta delectus illo fugiat.
+                    </p>
+                </li>
+                <li>
+                    <img class="feature-image" width="100" height="auto" src="syringe.svg"></img>
+                    <h2 class="feature-text">Freundliches Personal</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis corporis, modi soluta delectus illo fugiat.
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <section id="section-contact">
+            <div>
+                <p>Wir freuen uns auf ihren besuch</p>
+                <a href="kontakt.html">Kontakt</a>
+            </div>
+        </section>
+        <footer>
+            <ul class="footer-nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="leistungen.html">Leistungen</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+            </ul>
+            <div class="footer-bottom">
+                <div class="footer-copyright">
+                    <span>© 2022 Sebastian Botezatu, Sinan Yildirim</span>
+                </div>
+            
+                <ul class="footer-socials">
+                    <a href="https://www.instagram.com/sin.y157">
+                        <li>
+                            <img width="24" height="24" src="instagram.png"/>
+                            <p>@sin.y157</p>
+                        </li>
+                    </a>
+                    <a href="https://www.instagram.com/sebastian_botezatu">
+                        <li>
+                            <img width="24" height="24" src="instagram.png"/>
+                            <p>@sebastian_botezatu</p>
+                        </li>
+                    </a>
+                </ul>
+            </div>
+        </footer>
 
     </body>
 
