--- a/public/kontakt.html
+++ b/public/kontakt.html
@@ -33,5 +33,32 @@
             </div>
             </div>
         </div>
+        <footer>
+            <ul class="footer-nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="leistungen.html">Leistungen</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+            </ul>
+            <div class="footer-bottom">
+                <div class="footer-copyright">
+                    <span>© 2022 Sebastian Botezatu, Sinan Yildirim</span>
+                </div>
+            
+                <ul class="footer-socials">
+                    <a href="https://www.instagram.com/sin.y157">
+                        <li>
+                            <img width="24" height="24" src="instagram.png"/>
+                            <p>@sin.y157</p>
+                        </li>
+                    </a>
+                    <a href="https://www.instagram.com/sebastian_botezatu">
+                        <li>
+                            <img width="24" height="24" src="instagram.png"/>
+                            <p>@sebastian_botezatu</p>
+                        </li>
+                    </a>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
