--- a/public/kontakt.html
+++ b/public/kontakt.html
@@ -12,7 +12,7 @@
             <div class="background-img3"> </div>
             <div class="mainBackground2"> </div>
             <nav>
-                <img src="Praxis_NEU.png" class="logo">
+                <img src="media/Praxis_NEU.png" class="logo">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="leistungen.html">LEISTUNGEN</a></li>
@@ -47,13 +47,13 @@
                 <ul class="footer-socials">
                     <a href="https://www.instagram.com/sin.y157">
                         <li>
-                            <img width="24" height="24" src="instagram.png"/>
+                            <img width="24" height="24" src="media/instagram.png"/>
                             <p>@sin.y157</p>
                         </li>
                     </a>
                     <a href="https://www.instagram.com/sebastian_botezatu">
                         <li>
-                            <img width="24" height="24" src="instagram.png"/>
+                            <img width="24" height="24" src="media/instagram.png"/>
                             <p>@sebastian_botezatu</p>
                         </li>
                     </a>
