--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <div class="mainBackground">
 
             <video autoplay loop muted plays-inline class="back-video">
-                <source src="media/videoclip.mp4" type="video/mp4">
+                <source src="media/videoclip.webm" type="video/mp4">
             </video>
 
             <nav>
