--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Praxis Niederrhein - Hausärztliche Gemeinschaftspraxis</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="media/Praxis_NEU.png">
+        <link rel="icon" href="media/logo.svg">
     </head>
     <body>
         <div class="navigator line">
@@ -17,7 +17,7 @@
             </video>
 
             <nav>
-                <img src="media/Praxis_NEU.png" class="logo">
+                <img src="media/logo.svg" class="logo">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="leistungen.html">LEISTUNGEN</a></li>
@@ -87,11 +87,5 @@
                 </ul>
             </div>
         </footer>
-
     </body>
-
-
-
-
-
 </html>
