--- a/public/kontakt.html
+++ b/public/kontakt.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Praxis Niederrhein - Hausärztliche Gemeinschaftspraxis</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="media/logo.svg">
     </head>
     <body>
         <div class="navigator line">
@@ -12,7 +13,7 @@
             <div class="background-img3"> </div>
             <div class="mainBackground2"> </div>
             <nav>
-                <img src="media/Praxis_NEU.png" class="logo">
+                <img src="media/logo.svg" class="logo">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="leistungen.html">LEISTUNGEN</a></li>
